--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 server:
-  port: 8087
+  port: 8080
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/diary
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    url: jdbc:p6spy:postgresql://localhost:5432/diary
     username: csw
-    password: sksnzm62
+    password: 1234
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        use_sql_comments: true
+
+logging:
+  level:
+    p6spy: info
